fix(forms): correct vertical alignment of checkboxes
Still, the size of that form element is changes depending on the browser and OS used
so it cannot be controlled precisely.

--- a/webapps/client/styles/_forms.less
+++ b/webapps/client/styles/_forms.less
@@ -38,6 +38,16 @@
   }
 }
 
+.checkbox {
+  label,
+  [type="checkbox"] {
+    vertical-align: middle;
+  }
+  label [type="checkbox"] {
+    margin-right: 5px;
+  }
+}
+
 
 .labels-left {
   .control-label {
